--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
     "lint:fix": "eslint src --ext ts,tsx --fix",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx}\"",
     "demo:onboarding": "vite --open /onboarding",
-    "demo:chat": "vite --open /chat-demo"
+    "demo:chat": "vite --open /chat-demo",
+    "figma": "node scripts/figma-cli.js",
+    "figma:init": "node scripts/figma-cli.js init",
+    "figma:push": "node scripts/figma-cli.js sync push",
+    "figma:pull": "node scripts/figma-cli.js sync pull",
+    "figma:export": "node scripts/figma-cli.js export tokens",
+    "tokens:update": "node scripts/update-tokens.js update",
+    "tokens:sync": "node scripts/tokens-auto-sync.js",
+    "tokens:watch": "chokidar 'tokens.json' -c 'npm run tokens:sync'",
+    "tokens:validate": "node scripts/update-tokens.js validate",
+    "dev:tokens": "concurrently \"npm run dev\" \"npm run tokens:watch\""
   },
   "dependencies": {
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "framer-motion": "^10.16.0",
     "react-router-dom": "^6.15.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
@@ -29,6 +39,8 @@
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.14",
+    "chokidar": "^3.6.0",
+    "concurrently": "^8.2.2",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
